stats hover visually organized and no longer activated when mousing over the invisible menu; added a line to the readme for UX2

--- a/less/uiv2.less
+++ b/less/uiv2.less
@@ -37,23 +37,36 @@
 .vote-stats {
     background: white;
     border: 1px black solid;
+	width: 120px;
+    position: relative;
+    left: -6px;
+    top: 24px;
 }
+
+.vote-stats p{
+	padding: 4px;
+	margin-bottom:4px;
+}
+
 
 .hover {
     position: relative;
 
     &:hover &__no-hover {
-        opacity: 0;
+        //opacity: 0;
+		text-decoration:underline;
     }
 
     &:hover &__hover {
         opacity: 1;
+		transform: scale(1); // undos the scale(0) in &__hover below
     }
 
     &__hover {
         position: absolute;
         top: 0;
         opacity: 0;
+		transform: scale(0); // this prevents hover being activated by mousing over the invisible menu, there might be a more official way to do this? -JF
     }
 
     &__no-hover {
